<resources>
    <string name="app_name">NextStep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address!</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters!</string>
    <string name="login_failed">Login failed</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="no_email_found">No email found</string>
    <string name="language_changed_to">Language changed to %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="i_already_have_an_account_underline"><u>I Already Have An Account</u></string>
    <string name="username">Username</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="nickname_must_be_no_longer_than_20_characters">Nickname must be no longer than 20 characters</string>
    <string name="nickname_can_only_contain_letters_numbers_and_underscores">Nickname can only contain letters, numbers, and underscores</string>
    <string name="password_should_be_at_least_8_characters">Password should be at least 8 characters!</string>
    <string name="password_must_contain_at_least_one_letter_and_one_digit">Password must contain at least one letter and one digit!</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="username_must_be_at_least_4_characters">Username must be at least 4 characters</string>
    <string name="password_visibility_icon">password visibility icon</string>

    <string name="error_network">There seems to be a problem with your network connection. Please check your internet.</string>
    <string name="error_timeout">The request timed out. Please try again.</string>

    <string name="error_unauthorized">You are not authorized to perform this action. Please log in.</string>
    <string name="error_forbidden">You don\'t have permission to access this resource.</string>
    <string name="error_conflict">There was a conflict with the request. Please try again.</string>
    <string name="error_not_found">The requested resource was not found. Please try again later.</string>
    <string name="error_server">We\'re experiencing technical difficulties. Please try again later.</string>
    <string name="error_service_unavailable">The service is currently unavailable. Please try again later.</string>
    <string name="error_unknown">An unknown error occurred. Please try again.</string>
    <string name="error_custom_message">An error occurred: %1$s</string>
    <string name="error_user_not_found">User does not exist. Please check your credentials.</string>
    <string name="error_invalid_credentials">Invalid credentials. Please try again.</string>
    <string name="error_user_already_exists">User already exists. Please use a different email.</string>
    <string name="invalid_format">Invalid format</string>

    <string name="default_web_client_id">542027497505-bia3eg08098is83l6nih4dimgn6ohj3k.apps.googleusercontent.com</string>
    <string name="paul_sheldon_goal">After a devastating car crash in the Colorado mountains, I’ve found myself isolated with no choice but to resurrect a character I already said goodbye to — Misery Chastain. My number one fan insists this book be written… or else.</string>
    <string name="fire">Fire</string>
    <string name="heart">Heart</string>
    <string name="cookie">Cookie</string>
    <string name="cheer">Cheer</string>
    <string name="well_done">Well Done!</string>
    <string name="react">React</string>
    <string name="dissapointed">Dissapointed</string>


</resources>