<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.authentication.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/log_in"
        android:textSize="@dimen/title_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
        android:layout_marginTop="@dimen/distance_md"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_md"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/tlEmail"
        app:layout_constraintStart_toStartOf="@id/tlEmail"
        app:layout_constraintTop_toBottomOf="@id/tlEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tlPassword"
        app:layout_constraintTop_toBottomOf="@id/tlPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_md"
        android:paddingVertical="@dimen/btn_vertical_padding"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="@dimen/body_regular"
        app:layout_constraintEnd_toEndOf="@id/tlEmail"
        app:layout_constraintStart_toStartOf="@id/tlEmail"
        app:layout_constraintTop_toBottomOf="@id/cbRememberMe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_md"
        android:backgroundTint="@android:color/transparent"
        android:paddingVertical="@dimen/btn_vertical_padding"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/md_theme_primary"
        android:textSize="@dimen/body_regular"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@id/tlEmail"
        app:layout_constraintStart_toStartOf="@id/tlEmail"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:strokeColor="@color/md_theme_primary"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/LayoutSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/distance_md"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/body_regular" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up_underline"
            android:textColor="@color/md_theme_primary"
            android:textSize="@dimen/body_regular" />
    </LinearLayout>

    <View
        android:id="@+id/overlayBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <include
        android:id="@+id/loaderLogin"
        layout="@layout/loader" />

</androidx.constraintlayout.widget.ConstraintLayout>